dmz/traefik/templates/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.durp.info`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    secretName: traefik-tls  

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`test.durp.info`) && PathPrefix(`/`) 
    kind: Rule
    services:
    - name: service0
      port: 443
  tls:
    secretName: authentik-tls

---

apiVersion: v1
kind: Service
metadata:
  name: authentik-server
spec:
  type: ExternalName
  externalName: authentik.durp.info

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: example-redirectregex
spec:
  redirectRegex:
    regex: (.)*
    replacement: https://authentik.durp.info/${1}
    permanent: false
